updating setup instructions

--- a/_includes/install_instructions/editor.html
+++ b/_includes/install_instructions/editor.html
@@ -23,7 +23,7 @@
       <article role="tabpanel" class="tab-pane active" id="editor-windows">
         <p>
           nano is a basic editor and the default that instructors use in the workshop.
-          It is installed along with Git.
+          It can be installed in MobaXTerm using the command <strong>'apt install nano'</strong>
         </p>
       </article>
       <article role="tabpanel" class="tab-pane" id="editor-macos">
@@ -31,7 +31,9 @@
           nano is a basic editor and the default that instructors use in the workshop.
           See the Git installation <a href="#editor-macos-video-tutorial">video tutorial</a>
           for an example on how to open nano.
+          <strong>
           It should be pre-installed.
+          </strong>
         </p>
         <h4 id="editor-macos-video-tutorial">Video Tutorial</h4>
         <div class="yt-wrapper2">
