Updating shell instructions

--- a/_includes/install_instructions/shell.html
+++ b/_includes/install_instructions/shell.html
@@ -15,7 +15,9 @@
     <div class="tab-content">
       <article role="tabpanel" class="tab-pane active" id="shell-windows">
         <ol>
-          <li>Download the FREE Home Edition MobaXTerm <a href="https://mobaxterm.mobatek.net/download.html">installer or portable</a> package.</li>
+            <li>Download the FREE Home Edition MobaXTerm <a href="https://mobaxterm.mobatek.net/download.html">installer</a> package. <br \>
+                Note: you can use the portable version if you want as well, you'll just skip the install steps and extract the zip file.
+          </li>
           <li>Run the installer and follow the steps below:
             <ol>
                 <li>Click Next.</li>
@@ -30,18 +32,18 @@
                 <li>In the top menu, click Settings.</li>
                 <li>Click Configuration.</li>
                 <li>Ensure that a persistent home and root directory are setup. They should look like the following <br />
-                    Persistent home directory: _AppDataDir_\MobaXterm\home<br />
-                    Persistent root (/) directory: _AppDataDir_\MobaXterm\root
+                    Persistent home directory: <code>_AppDataDir_\MobaXterm\home</code><br />
+                    Persistent root (/) directory: <code>_AppDataDir_\MobaXterm\root</code>
                 </li>
-                <li>Click OK</li>
+                <li>Click OK.</li>
             </ol>
           </li>
           <li>Click 'Start Local Terminal'</li>
           <li> Now we will install nano:
               <ol>
-                  <li>Type 'apt install nano' and press Enter to install nano</li>
-                  <li>Type 'y' to accept the terms of use and press Enter</li>
-                  <li>Type 'y' to download and install packages, then press Enter</li>
+                  <li>Type <code>apt install nano</code> and press Enter.</li>
+                  <li>Type <code>y</code> to accept the terms of use and press Enter.</li>
+                  <li>Type <code>y</code> to download and install packages, then press Enter.</li>
               </ol>
           </li>
         </ol>
