minor bug fix in shell instructions

--- a/_includes/install_instructions/shell.html
+++ b/_includes/install_instructions/shell.html
@@ -15,7 +15,7 @@
     <div class="tab-content">
       <article role="tabpanel" class="tab-pane active" id="shell-windows">
         <ol>
-            <li>Download the FREE Home Edition MobaXTerm <a href="https://mobaxterm.mobatek.net/download.html">installer</a> package. <br \>
+            <li>Download the FREE Home Edition MobaXTerm <a href="https://mobaxterm.mobatek.net/download.html">installer</a> package. <br />
                 Note: you can use the portable version if you want as well, you'll just skip the install steps and extract the zip file.
           </li>
           <li>Run the installer and follow the steps below:
