minor shell instructions update

--- a/_includes/install_instructions/shell.html
+++ b/_includes/install_instructions/shell.html
@@ -16,7 +16,7 @@
       <article role="tabpanel" class="tab-pane active" id="shell-windows">
         <ol>
             <li>Download the FREE Home Edition MobaXTerm <a href="https://mobaxterm.mobatek.net/download.html">installer</a> package. <br />
-                Note: you can use the portable version if you want as well, you'll just skip the install steps and extract the zip file.
+                Note: you can use the portable version instead if you want, you will need to skip the install steps and instead extract the zip file to use the program.
           </li>
           <li>Run the installer and follow the steps below:
             <ol>
