--- a/_includes/install_instructions/shell.html
+++ b/_includes/install_instructions/shell.html
@@ -55,8 +55,6 @@
 	  Bash is available in all versions, so no need to install anything.
 	  You access Bash from the Terminal (found in
 	  <code>/Applications/Utilities</code>).
-          See the Git installation <a href="#shell-macos-video-tutorial">video tutorial</a>
-          for an example on how to open the Terminal.
           You may want to keep Terminal in your dock for this workshop.
         </p>
         <p>
@@ -69,12 +67,9 @@
           If you want to change your default shell, see <a href="https://support.apple.com/en-au/HT208050" rel="noopener">
           this Apple Support article</a> and follow the instructions on "How to change your default shell".
         </p>
-        <h4 id="shell-macos-video-tutorial">Video Tutorial</h4>
-        <div class="yt-wrapper2">
-        <div class="yt-wrapper">
-        <iframe type="text/html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" src="https://www.youtube-nocookie.com/embed/9LQhwETCdwY?modestbranding=1&playsinline=1&iv_load_policy=3&rel=0" class="yt-frame" allowfullscreen></iframe>
-        </div>
-        </div>
+        <p>
+        In order to access remote X window programs, you will need an X Display server on your Mac.  There is a free one called XQuartz located <a href="https://www.xquartz.org/">here</a>.  Please download and setup this software on your Mac if you wish to follow along with the GUI portion of our training.
+        </p>
       </article>
       <article role="tabpanel" class="tab-pane" id="shell-linux">
         <p>
