updating setup instructions

--- a/_includes/install_instructions/editor.html
+++ b/_includes/install_instructions/editor.html
@@ -9,7 +9,8 @@
     intuitive. If you accidentally find yourself stuck in it, hit
     the <kbd>Esc</kbd> key, followed by <kbd>:</kbd>+<kbd>Q</kbd>+<kbd>!</kbd>
     (colon, lower-case 'q', exclamation mark), then hitting <kbd>Return</kbd> to
-    return to the shell.
+    return to the shell. <br \>
+    Click your OS below for instructions specific to that OS
   </p>
 
   <div>
@@ -23,7 +24,7 @@
       <article role="tabpanel" class="tab-pane active" id="editor-windows">
         <p>
           nano is a basic editor and the default that instructors use in the workshop.
-          It can be installed in MobaXTerm using the command <strong>'apt install nano'</strong>
+          It can be installed in MobaXTerm using the command <code>apt install nano</code>
         </p>
       </article>
       <article role="tabpanel" class="tab-pane" id="editor-macos">
