--- a/_includes/install_instructions/shell.html
+++ b/_includes/install_instructions/shell.html
@@ -2,7 +2,8 @@
   <h3>The Bash Shell</h3>
   <p>
     Bash is a commonly-used shell that gives you the power to do
-    tasks more quickly.
+    tasks more quickly. <br \>
+    Click your OS below for instructions specific to that OS
   </p>
 
   <div>
