minor typos fixed

--- a/_includes/install_instructions/shell.html
+++ b/_includes/install_instructions/shell.html
@@ -3,7 +3,7 @@
   <p>
     Bash is a commonly-used shell that gives you the power to do
     tasks more quickly. <br />
-    Click your OS below for instructions specific to that OS
+    Click your OS below for instructions specific to that OS.
   </p>
 
   <div>
@@ -23,7 +23,7 @@
             <ol>
                 <li>Click Next.</li>
                 <li>Check the box to accept the License Agreement and then Click Next.</li>
-                <li>Don't change the install location unless you have a good reason too.</li>
+                <li>Don't change the install location unless you have a good reason to.</li>
                 <li>Click Install.</li>
                 <li>Click Finish.</li>
             </ol>
