--- a/_includes/install_instructions/editor.html
+++ b/_includes/install_instructions/editor.html
@@ -8,9 +8,9 @@
     Linux is usually set to Vim, which is not famous for being
     intuitive. If you accidentally find yourself stuck in it, hit
     the <kbd>Esc</kbd> key, followed by <kbd>:</kbd>+<kbd>Q</kbd>+<kbd>!</kbd>
-    (colon, lower-case 'q', exclamation mark), then hitting <kbd>Return</kbd> to
+    (colon, lower-case 'q', exclamation mark), then hit <kbd>Return</kbd> to
     return to the shell. <br />
-    Click your OS below for instructions specific to that OS
+    Click your OS below for instructions specific to that OS.
   </p>
 
   <div>
