--- a/_includes/swc/intro.html
+++ b/_includes/swc/intro.html
@@ -12,7 +12,7 @@
 <p align="center">
   <em>
     For more information on what we teach and why,
-    please see our paper
+    please see the paper
     "<a href="https://doi.org/10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
 </p>
